changed: scrollbar style changed: caret color in theme added: check box as list added: plus plus theme added: show info command (instead of word count) fixed: theme selection on click removed: confirmation before switching vault changed: show temps info in search dialog changed: download both vaults data in one json file removed: light mode added: vault in title bar

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 body {
 	margin-left: 7%;
 	margin-right: 7%;
-	caret-color: #5AA7CE;
 }
 
 input {
@@ -20,17 +19,17 @@ input {
 :root
 {
 	scrollbar-width: thin;
-	scrollbar-color: RGBA(90, 167, 206, 0.5) lightgray;
+	scrollbar-color: lightgray;
 }
 
 body::-webkit-scrollbar {
-    height: 5px;
-    width: 5px;
-    background-color: lightgray;
+    height: 7px;
+    width: 7px;
+    background-color: darkgray;
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: RGBA(90, 167, 206, 0.5);
+    background-color: lightgray;
     border-radius: 10px;
 }
 
@@ -96,6 +95,7 @@ body::-webkit-scrollbar-thumb {
 	background-color: lightgray;
 	opacity: 1;
 	width: 90%;
+	color: black;
 }
 
 /* authent */
